Reefactor UI redesign and fix layout issues

--- a/frontend/src/assets/css/components/navbar.css
+++ b/frontend/src/assets/css/components/navbar.css
@@ -1,13 +1,13 @@
 #header {
- background: linear-gradient(120deg, rgba(255,255,255,0.1), rgba(6, 5, 5, 0.217));
+  background-color: black;
   color: white;
- 
   padding: 15px 20px; 
-  margin-bottom: 0.4rem;
 }
 
 .navContainer {
   display: flex;
+  width: 100%;
+  height: 100%;
   align-items: center;
   justify-content: space-between;
 }
@@ -15,20 +15,13 @@
 .navLeft .webLogo {
   font-size: 22px;
   font-weight: bold;
-  color: black;
+  color: white;
   text-decoration: none;
   letter-spacing: 1.2px;
   font-size: 1.3rem;
 }
 
-.navCenter input {
-  width: 400px;
-  padding: 8px 12px;
-  border-radius: 6px;
-  border: 1px solid gray;
-  outline: none;
 
-}
 
 .navRight {
   display: flex;
@@ -41,6 +34,7 @@
   position: relative;
   font-size: 20px;
   cursor: pointer;
+  color: white;
 }
 
 .badge {
@@ -53,17 +47,6 @@
   border-radius: 50%;
 }
 
-.userAvatar {
-  width: 35px;
-  height: 35px;
-  background: #38bdf8;
-  color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  cursor: pointer;
-}
 
 /* Dropdown */
 .dropdown {
@@ -108,7 +91,10 @@
 }
 
 .authBtns .link.login{
-  color: black;
+  color: white;
+  font-size: 10px;
+  border: 1px solid white;
+  padding: 2px;
 }
 
 
@@ -116,6 +102,8 @@
 
   #header {
     padding: 10px 12px;
+    background-color: black;
+    color: white;
   }
 
   .navContainer {
@@ -143,9 +131,15 @@
   }
 
   .userAvatar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 30px;
     height: 30px;
     font-size: 13px;
+    border: 1.5px solid white;
+    border-radius: 50%;
+    background-color: rgb(49, 107, 26);
   }
 
   /* auth buttons smaller */
@@ -160,13 +154,20 @@
     right: 10px;
     padding: 12px;
   }
+  .dropdown .username{
+    text-transform: capitalize;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
 
 }
 
 @media (max-width: 360px) {
 
   #header {
+    
+    height: 10vh;
     padding: 8px 10px;
+
   }
 
   .navLeft .webLogo {
