--- a/frontend/src/assets/css/forms/signup.css
+++ b/frontend/src/assets/css/forms/signup.css
@@ -84,3 +84,10 @@
   color: #3b82f6;
   cursor: pointer;
 }
+
+
+@media (max-width:480px){
+  .authCard.signupCard{
+    width: 340px;
+  }
+}
